# HabitFlow-API

./: .bandit.yaml  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  check_env.py  conftest.py  create_test_data.py  docker-compose.env.example  docker-compose.override.yml  docker-compose.yml  make.bat  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  start.sh
.github/workflows/: ci.yml
config/: __init__.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
config/tests/: test_settings.py
docs/: CI_CD_SETUP.md  manual_endpoints.py  views.py
docs/tests/: test_docs.py
habitflow/: asgi.py  settings.py  urls.py  wsgi.py
habits/: constants.py  middleware.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_duration_and_more.py  0003_add_frequency_validation.py
habits/tests/: test_admin_basic.py  test_api.py  test_basic_completions.py  test_completion_serializers.py  test_completions.py  test_correct_models.py  test_import_coverage.py  test_middleware_basic.py  test_models_complete.py  test_permissions.py  test_serializers.py  test_simple_permissions.py  test_simple_validators.py  test_simple_working.py  test_utils_basic.py  test_validators.py  test_validators_complete.py  test_views_basic.py  test_views_simple.py
habits/utils/: settings_helper.py
nginx/: nginx.conf
nginx/html/: index.html
scripts/: create_superuser.py  create_test_data.py  deploy.sh  generate-env.sh  health_check.py  setup_env.py  wait_for_db.py
scripts/tests/: test_basic.py
telegram_bot/: apps.py  handlers.py  models.py  services.py  tasks.py  urls.py  views.py
telegram_bot/management/commands/: run_bot.py  send_daily_reports.py  send_reminders.py  send_test_reminder.py  setup_bot.py  start_bot.py  test_bot.py  test_notification.py
telegram_bot/migrations/: 0001_initial.py  0002_telegramconnectioncode.py
telegram_bot/tests/: test_basic.py  test_services_simple.py
templates/docs/: api_documentation.html
users/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_auth.py
