[tool.poetry]
name = "habitflow-api"
version = "0.1.0"
description = "API для трекера привычек"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2"
djangorestframework = "^3.14"
psycopg2-binary = "^2.9"
django-cors-headers = "^4.2"
djangorestframework-simplejwt = "^5.3"
celery = "^5.3"
redis = "^5.0"
python-telegram-bot = "^20.3"
drf-yasg = "^1.21"
python-dotenv = "^1.0"
gunicorn = "^21.2"
whitenoise = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.7"
coverage = "^7.4"
black = "^24.0"
flake8 = "^7.0"
mypy = "^1.8"
django-stubs = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip = ["migrations", "venv", ".venv"]
known_first_party = ["habits"]
[dependency-groups]
lint = [
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)"
]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
