[tool.poetry]
name = "habitflow-api"
version = "1.0.0"
description = "🚀 HabitFlow API - Трекер полезных привычек по методологии Atomic Habits"
authors = ["Anton-Tu <anton.tumashov@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Anton742-Tu/HabitFlow-API"
repository = "https://github.com/Anton742-Tu/HabitFlow-API"
keywords = ["django", "habits", "atomic-habits", "api", "telegram-bot"]

[tool.poetry.dependencies]
python = "^3.12"
# Django Core
Django = "^5.2"
djangorestframework = "^3.14"
djangorestframework-simplejwt = "^5.3"

# Database
psycopg2-binary = "^2.9"

# API & Documentation
drf-yasg = "^1.21"
django-filter = "^25.2"
django-cors-headers = "^4.2"

# Task Queue (Celery)
celery = "^5.3"
redis = "^5.0"
django-celery-beat = "^2.8"
django-celery-results = "^2.6"

# Telegram Bot
python-telegram-bot = "^20.3"

# Utilities
python-dotenv = "^1.0"
gunicorn = "^21.2"
whitenoise = "^6.0"
pillow = "^12.0"

# Windows-specific (можно удалить если не нужно)
django-timezone-field = {version = "^7.2", optional = true}
setuptools = "==70.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0"
pytest-django = "^4.8"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
pytest-xdist = "^3.5"
factory-boy = "^3.3"
Faker = "^23.0"

# Code Quality
black = "^24.1"
isort = "^5.13"
mypy = "^1.8"
pre-commit = "^3.6"
bandit = "^1.7"

# Development Tools
django-extensions = "^3.2"
ipython = "^8.22"
debugpy = "^1.8"
watchfiles = "^0.21"

# Type Stubs
django-stubs = "^5.0"
djangorestframework-stubs = "^3.16"
types-requests = "^2.31"
types-redis = "^4.6"

# Documentation
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"
flake8 = "^7.3.0"
drf-spectacular = "^0.29.0"

[tool.poetry.group.lint.dependencies]
# Линтеры для CI
black = "^24.1"
isort = "^5.13"
flake8 = "^7.0"
mypy = "^1.8"

[tool.poetry.group.ci.dependencies]
# Для CI/CD
coverage = "^7.4"
pytest-html = "^4.1"
python-semantic-release = "^9.0"

[tool.poetry.extras]
windows = ["django-timezone-field"]
production = ["gunicorn", "whitenoise"]
development = ["django-extensions", "ipython", "debugpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | staticfiles
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["habits", "users", "telegram_bot", "config"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    ".venv/",
    "venv/",
    ".env/",
    "env/",
    "tests/",
    "staticfiles/",
    "scripts/",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["habits", "users", "telegram_bot"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "slow: slow running tests",
    "integration: integration tests",
    "unit: unit tests",
    "auth: authentication tests",
    "api: API tests",
    "telegram: telegram bot tests",
]

[tool.coverage.run]
source = ["habits", "users", "telegram_bot"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
